--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "tsup",
     "ci": "npm run build && npm run check-exports && npm run lint && npm run test",
     "check-exports": "attw --pack .",
+    "lint" : "tsc",
     "test": "jest --config jest.config.cjs"
   },
   "repository": {
