--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "ci": "npm run build && npm run check-exports && npm run lint && npm run test",
     "check-exports": "attw --pack .",
     "lint" : "tsc",
-    "test": "jest --config jest.config.cjs"
+    "test": "jest --config jest.config.cjs --coverage"
   },
   "repository": {
     "type": "git",
